2006-08-22 Joerg Wunsch <j@uriah.heep.sax.de>

	* bitbang.c: Move the bitbang prerequisite checks out from
	main() into their own bitbang_check_prerequisites().
	* bitbang.h: (Ditto.)
	* main.c: (Ditto.)
	* par.c: (Ditto.)
	* serbb_posix.c: (Ditto.)
	* serbb_win32.c: (Ditto.)

2006-08-22 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add page mode parameters for all "eeprom"
	memory definitions that are organized in pages.
	* avr.c (avr_write_byte_default): Consider using the loadpage
	instructions only if the respective memory is marked "paged".
	Closes bug #17199: EEPROM fails verification on ATmega645 with
	pony-stk200 hardware
	Closes bug #16849: EEPROM write fails for AT90USB1287 with
	mode 0x41
	Closes bug #15146: stk500v2_paged_write: loadpage instruction
	not defined for part

2006-08-22 Joerg Wunsch <j@uriah.heep.sax.de>

	* doc/avrdude.info (-c): Change "avrispmk2" into "avrisp2" as that
	is the programmer actually supported by avrdude.conf.in.
	Closes bug #15677: documentation mentions wrong programmer-id
	"avrispmk2"

2006-08-21 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix various AVR910 device codes.  Add the code
	tables from both, AVR910 and AVR109.  Change avr910_devcode of
	the ATtiny2313 to 0x5e (ATtiny26).
	Closes bug #16671: Tiny2313 avr910_devcode is bad
	Closes bug #15826: avr910 device type for ATmega8 wrong

2006-08-21 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Add (rather conservative) write delay timing
	values to the *fuse and lock memory spaces of all devices where
	they have been missing.  Add the lock memory space to the ATmega48
	section.
	Closes bug #14920: tiny2313 fuses and AVRDUDE 5.0
	Closes bug #15751: atmega48: no lock bits defined

2006-08-21 Joerg Wunsch <j@uriah.heep.sax.de>

	* avrdude.conf.in: Fix the size of the calibration memory space
	for ATtiny13, ATmega64, ATmega16, ATmega32, ATmega8535, ATtiny25,
	ATtiny45, ATtiny85.